--- a/Student-Management-System/src/main/resources/application.properties
+++ b/Student-Management-System/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Student-Management-System
 
 spring.datasource.url=jdbc:mysql://localhost:3306/sms
 spring.datasource.username=root
-spring.datasource.password=Manan@13
+spring.datasource.password=*****
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
